# Talent-Forge

./: .editorconfig  .env.example  .gitignore  DEMO_RESULTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICK_CHECKLIST.md  README.md  REMAINING_WORK.md  RUN.md  function.py
api/: README.md  alembic.ini  pyproject.toml  pytest.ini
api/alembic/: env.py
api/alembic/versions/: .gitkeep
api/app/: __init__.py  database.py  main.py  models.py
api/app/routes/: __init__.py  analyze.py  rewrite.py
api/app/schemas/: __init__.py  analyze.py  rewrite.py
api/app/services/: PLACEHOLDER.md  __init__.py  file_parser.py
api/app/tests/: test_analyze.py  test_health.py  test_rewrite.py
docs/: API_CONTRACT.md  DEMO_DECK_OUTLINE.md  OFFBOARDING.md  SYSTEM_DESIGN_ONE_PAGER.md  TECH_STACK.md
docs/quick-start/: COMMON_ISSUES.md  QUICK_START.md  README.md  SETUP.md  setup.sh
fixtures/expected/: analyze_output_example.json
fixtures/jds/: sample_jd_1.txt  sample_jd_2.txt
fixtures/resumes/: sample_resume_1.txt  sample_resume_2.txt
flask-app/: main.py  requirements.txt
flask-app/templates/: index.html
frontend/: next-env.d.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/src/lib/: api.ts
frontend/src/mocks/: browser.ts  handlers.ts
frontend/src/pages/: _app.tsx  index.tsx  results.tsx
infra/: api.Dockerfile  docker-compose.yml  frontend.Dockerfile
infra/scripts/: bootstrap_db.sql  verify_env.sh
ml/: README.md
ml/prompts/: rewrite_prompt.txt
ml/scorer/: PLACEHOLDER.md  __init__.py
openapi/: talent-forge.v1.yaml
(+2 files in other folders)
